# pcs2kr

./: .gitignore  CMakeLists.txt  README.md
docs/: SRS.md  generate_pdf.ps1  generate_pdf.py  requirements.md
docs/uml/: class_diagram.puml  sequence_diagram.puml  use_case.puml
include/: building.hpp  console.hpp  dispatcher.hpp  elevator.hpp  simulator.hpp  types.hpp
src/: building.cpp  console.cpp  dispatcher.cpp  elevator.cpp  main.cpp  simulator.cpp
